layout issues cleared

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,8 @@ a{
     color: #2d2d2d;
     line-height: 1.25rem;
     height: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 #main a{
@@ -197,8 +199,9 @@ a{
 }
 
 .boxes{
-    display: flex;
-    
+    position: relative;
+    z-index: 2;
+    margin-top: 26px;
 }
 
 .box1{
@@ -294,8 +297,8 @@ ul {
 }
 
 .box2{
-    position: static;
-    top: 50%;
+    position: absolute;
+    top: 298px;
     left: 48%;
     z-index: 100;
 }
